// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-Button23456"
  >
    <button
      class="ant-btn css-dev-only-do-not-override-1enej14 css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      id="Button23456"
      type="button"
    >
      <span>
        Button23456
      </span>
    </button>
  </div>
</div>
`;

exports[`Disabled Col 1`] = `
<div>
  <div
    id="bl-Disabled Col23456"
  >
    <input
      class="ant-input css-dev-only-do-not-override-1enej14 ant-input-outlined css-var-root ant-input-css-var"
      id="Disabled Col23456"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Input 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-Input23456"
  >
    <input
      class="ant-input css-dev-only-do-not-override-1enej14 ant-input-outlined css-var-root ant-input-css-var"
      id="Input23456"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Input 2`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-Input23456"
  >
    <input
      class="ant-input css-dev-only-do-not-override-1enej14 ant-input-outlined css-var-root ant-input-css-var"
      id="Input23456"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Paragraph span: 12 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-Paragraph span: 1223456"
  >
    <div
      id="Paragraph span: 1223456"
    >
      Loem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;

exports[`Paragraph style 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-Paragraph style23456"
    style="background: white; border-radius: 20px;"
  >
    <div
      id="Paragraph style23456"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;
